--- a/.github/workflows/Continous_int.yml
+++ b/.github/workflows/Continous_int.yml
@@ -11,17 +11,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Check out the repository code
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Step 2: Set up Node.js with the desired version (here, version 16)
-      - name: Set up Node
+      - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '16'
 
-      # Step 3: Verify the current Node version (this confirms you’re using the correct version)
       - name: Verify Node Version
         run: echo "Node version: $(node -v)"
 
@@ -32,7 +29,7 @@ jobs:
         working-directory: ./backend
         run: npm install
 
-      - name: Test Backend (if you have a test script)
+      - name: Test Backend (if available)
         working-directory: ./backend
         run: |
           if npm run | grep -q "test"; then
