--- a/.github/workflows/Continous_int.yml
+++ b/.github/workflows/Continous_int.yml
@@ -1,71 +1,71 @@
 name: Bear Commerce CI
-
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
-jobs:
-  build-test:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '16'
-
-      - name: Verify Node Version
-        run: echo "Node version: $(node -v)"
-
-      #####################################
-      # BACKEND
-      #####################################
-      - name: Install Backend Dependencies
-        working-directory: ./backend
-        run: npm install
-
-      - name: Test Backend (if available)
-        working-directory: ./backend
-        run: |
-          if npm run | grep -q "test"; then
-            npm run test
-          else
-            echo "No test script for backend, skipping..."
-          fi
-
-      #####################################
-      # FRONTEND
-      #####################################
-      - name: Install Frontend Dependencies
-        working-directory: ./frontend
-        run: npm install
-
-      - name: Test Frontend
-        working-directory: ./frontend
-        run: |
-          if npm run | grep -q "test"; then
-            npm run test
-          else
-            echo "No test script for frontend, skipping..."
-          fi
-
-      #####################################
-      # ADMIN
-      #####################################
-      - name: Install Admin Dependencies
-        working-directory: ./admin
-        run: npm install
-
-      - name: Test Admin
-        working-directory: ./admin
-        run: |
-          if npm run | grep -q "test"; then
-            npm run test
-          else
-            echo "No test script for admin, skipping..."
-          fi
+ 
+ # Trigger the workflow on pushes to 'main' branch or on pull requests
+ on:
+   push:
+     branches: [ "main" ]
+   pull_request:
+     branches: [ "main" ]
+ 
+ jobs:
+   build-test:
+     runs-on: ubuntu-latest
+ 
+     steps:
+       # Step 1: Check out the repository code
+       - name: Checkout code
+         uses: actions/checkout@v3
+ 
+       # Step 2: Use Node.js (adjust the version to match your project)
+       - name: Set up Node
+         uses: actions/setup-node@v3
+         with:
+           node-version: '22'
+ 
+       #####################################
+       # BACKEND
+       #####################################
+       - name: Install Backend Dependencies
+         working-directory: ./backend
+         run: npm install
+ 
+       - name: Test Backend (if you have a test script)
+         working-directory: ./backend
+         run: |
+           if npm run | grep -q "test"; then
+             npm run test
+           else
+             echo "No test script for backend, skipping..."
+           fi
+ 
+       #####################################
+       # FRONTEND
+       #####################################
+       - name: Install Frontend Dependencies
+         working-directory: ./frontend
+         run: npm install
+ 
+       - name: Test Frontend
+         working-directory: ./frontend
+         run: |
+           if npm run | grep -q "test"; then
+             npm run test
+           else
+             echo "No test script for frontend, skipping..."
+           fi
+ 
+       #####################################
+       # ADMIN
+       #####################################
+       - name: Install Admin Dependencies
+         working-directory: ./admin
+         run: npm install
+ 
+       - name: Test Admin
+         working-directory: ./admin
+         run: |
+           if npm run | grep -q "test"; then
+             npm run test
+           else
+             echo "No test script for admin, skipping..."
+           fi
