Adding bcrypt npm to backend package.json for heroku

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node server.js",
     "server": "nodemon server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "heroku-postbuild": "npm rebuild bcrypt"
   },
   "author": "",
   "license": "ISC",
